added calculateReservation
